force-app/main/default/objects/Fax_To_Case_Backups__c/Fax_To_Case_Backups__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Fax To Case Backups</label>
</CustomObject>