force-app/main/default/objects/Fax_To_Case_Backups__c/fields/Chicago__c.field-meta.xml
<CustomField>
    <fullName>Chicago__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Chicago</label>
    <type>Checkbox</type>
</CustomField>