force-app/main/default/objects/Fax_To_Case_Backups__c/fields/Commerce__c.field-meta.xml
<CustomField>
    <fullName>Commerce__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Commerce</label>
    <type>Checkbox</type>
</CustomField>