force-app/main/default/objects/Fax_To_Case_Backups__c/fields/Dallas__c.field-meta.xml
<CustomField>
    <fullName>Dallas__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Dallas</label>
    <type>Checkbox</type>
</CustomField>