force-app/main/default/objects/Fax_To_Case_Backups__c/fields/Jacksonville__c.field-meta.xml
<CustomField>
    <fullName>Jacksonville__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Jacksonville</label>
    <type>Checkbox</type>
</CustomField>