force-app/main/default/objects/Fax_To_Case_Backups__c/fields/La_Palma__c.field-meta.xml
<CustomField>
    <fullName>La_Palma__c</fullName>
    <defaultValue>true</defaultValue>
    <label>La Palma</label>
    <type>Checkbox</type>
</CustomField>