force-app/main/default/objects/Fax_To_Case_Backups__c/fields/Minneapolis__c.field-meta.xml
<CustomField>
    <fullName>Minneapolis__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Minneapolis</label>
    <type>Checkbox</type>
</CustomField>