force-app/main/default/objects/Fax_To_Case_Backups__c/fields/St_Louis__c.field-meta.xml
<CustomField>
    <fullName>St_Louis__c</fullName>
    <defaultValue>true</defaultValue>
    <label>St Louis</label>
    <type>Checkbox</type>
</CustomField>